src/test/ui/issues/issue-17718-patterns.stderr
error[E0658]: referencing statics in patterns is experimental
  --> $DIR/issue-17718-patterns.rs:7:9
   |
LL |         A1 => {}
   |         ^^
   |
   = help: add `#![feature(static_in_pattern)]` to the crate attributes to enable

error[E0158]: mutable statics cannot be referenced in patterns
  --> $DIR/issue-17718-patterns.rs:8:9
   |
LL |         A2 => {}
   |         ^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0158, E0658.
For more information about an error, try `rustc --explain E0158`.
